# ViGEm-null-xinput-device

./: CMakeLists.txt  Licence.txt  README.md
libs/ViGemClient/lib/release/x64/: ViGEmClient.lib
src/: main.cpp
